--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.2",
+    "@supabase/supabase-js": "^2.89.0",
     "@types/three": "^0.182.0",
     "clsx": "^2.1.1",
     "gsap": "^3.14.2",
